--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name" : "dpb587/ravelry-api-cli",
-    "description" : "A simple PHP CLI for consuming the Ravelry API.",
-    "keywords" : [ "api", "cli", "ravelry" ],
-    "homepage" : "https://github.com/dpb587/ravelry-api-php-cli",
-    "license" : "MIT",
+  "name" : "theloopyewe/ravelry-api-cli",
+  "description" : "A simple PHP CLI for consuming the Ravelry API.",
+  "keywords" : [ "api", "cli", "ravelry" ],
+  "homepage" : "https://github.com/theloopyewe/ravelry-api-php-cli",
+  "license" : "MIT",
 
-    "minimum-stability" : "dev",
+  "minimum-stability" : "dev",
 
-    "authors" : [
-        {
-            "name" : "Danny Berger",
-            "email" : "dpb587@gmail.com",
-            "homepage" : "https://dpb587.me"
-        }
-    ],
-
-    "require" : {
-        "php" : ">=5.3.2",
-        "symfony/console" : "2.4.5",
-        "guzzlehttp/log-subscriber" : "1.0.0",
-        "dpb587/ravelry-api" : "dev-master"
-    },
-
-    "autoload" : {
-        "psr-0" : {
-            "RavelryApi\\Console" : "src/"
-        }
+  "authors" : [
+    {
+      "name" : "Danny Berger",
+      "email" : "dpb587@gmail.com",
+      "homepage" : "https://dpb587.me"
     }
+  ],
+
+  "require" : {
+    "php" : ">=5.3.2",
+    "symfony/console" : "2.4.5",
+    "guzzlehttp/log-subscriber" : "1.0.0",
+    "theloopyewe/ravelry-api" : "dev-master"
+  },
+
+  "autoload" : {
+    "psr-0" : {
+      "RavelryApi\\Console" : "src/"
+    }
+  }
 }
